--- a/google-home.html
+++ b/google-home.html
@@ -17,7 +17,7 @@
     </div>
 
     <div id="main">
-        <a href="#" id="logo"><img src="/image/google-logo.png"></a>
+        <img id='logo' src="/image/google-logo.png">
         <input type="text" id="search-bar">
         <div id="flexbox">
           <button id="google-search-button">Google Searche</button>
@@ -26,13 +26,13 @@
     </div>
 
     <div id="footer">
-        <a href="#" id="">Advertising</a>
-        <a href="#" id="">Business</a>
-        <a href="#" id="">How Search works</a>
-        <a href="#" id="">Carbon neutral since 2007</a>
-        <a href="#" id="">Privacy</a>
-        <a href="#" id="">Terms</a>
-        <a href="#" id="">Settings</a>
+      <a href="#" id="footer1">Advertising</a>
+      <a href="#" id="footer2">Business</a>
+      <a href="#" id="footer3">How Search works</a>
+      <a href="#" id="footer4">Carbon neutral since 2007</a>
+      <a href="#" id="footer5">Privacy</a>
+      <a href="#" id="footer6">Terms</a>
+      <a href="#" id="footer7">Settings</a>
     </div>
   </body>
 </html>
