Github publish doesn't show my images, remove / from image path and try again

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       <a href="#" id="store">Store</a>
       <a href="#" id="gmail">Gmail</a>
       <a href="#" id="images">Images</a>
-      <a href="#" id="menu"><img id="menu-pic" src="/image/google_app-icon.png" ></a>
-      <a href="#" id="profile"><img id="profile-pic" src="/image/Google_profile.png" ></a>
+      <a href="#" id="menu"><img id="menu-pic" src="image/google_app-icon.png" ></a>
+      <a href="#" id="profile"><img id="profile-pic" src="image/Google_profile.png" ></a>
     </div>
 
     <div id="main">
-        <img id='logo' src="/image/google-logo.png">
+        <img id='logo' src="image/google-logo.png">
         <input type="text" id="search-bar">
         <div id="flexbox">
           <button id="google-search-button">Google Searche</button>
